--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "animate.css": "^4.1.1",
+    "enzyme-to-json": "^3.6.1",
     "firebase": "^8.2.1",
     "moment": "^2.29.1",
     "node-sass": "^4.0.0",
@@ -44,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cloudinary": "^1.23.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "redux-mock-store": "^1.5.4"
   }
 }
