--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "cloudinary": "^1.23.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "redux-mock-store": "^1.5.4"
   }
 }
